Логика смены тем

--- a/index.html
+++ b/index.html
@@ -5,12 +5,16 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script type="module" src="/main.js" defer></script>
+    <link rel="stylesheet" href="	https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <link rel="stylesheet" href="style.scss">
     <title>Heads and Tails</title>
   </head>
   <body>
+    <header class="header">
+      <button class="header__toggle-button">Change theme</button>
+    </header>
     <div class="start">
-        <button class="start__button">Start</button>
+      <button class="start__button">Start</button>
     </div>
 </body>
 </html>
